tests/tooling/fixtures/native/recovery/positive/conditional_basic_select.objc3
module ConditionalBasicSelect;

fn main() -> i32 {
  let flag = true;
  let out = flag ? 11 : 22;
  return out;
}
