tests/tooling/fixtures/native/recovery/negative/negative_assignment_modulo_assign_bool_rhs.objc3
// Expected diagnostic code(s): O3S206.
module NegativeAssignmentModuloAssignBoolRhs;

fn main() -> i32 {
  let x = 5;
  let flag = true;
  x %= flag;
  return x;
}